# theObserver

./: README.md  main.py
Mockups/Website mockup/: fullscreen.html  preview.html
Mockups/Website mockup/src/: index.html
Mockups/theObserver-html/: preview.html
Mockups/theObserver-html/src/: index.html
Mockups/theObserver-html_version2/: preview.html
ObserverWebsite/: placeholder.txt
ObserverWebsite/observer-website-ionic/: package-lock.json  package.json
ObserverWebsite/observer-website-ionic/src/: index.html
ObserverWebsite/theObserver/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
ObserverWebsite/theObserver/src/: index.html
Python_Code/: HttpStreamer.py  Logger.py  MqttSender.py  OLD_main.py  OLD_multiprocessing.py  Pipfile  Python_Code.code-workspace  Recognizer.py  analyze_image.py  gui.py  log.py  main.py  mqtt.py  multiprocessing.txt  pyproject.toml  readme.md  stream.py
doc/: Project Diary Template_v03_D.docx  Project Diary Template_v04_D.docx  Project_Diary_Group29_Visitor-Counter.docx  Raspi_chromium_kiosk_commands_Buster.txt  main.py  ~$oject_Diary_Group29_Visitor-Counter.docx
doc/Effort_Estimation/: DAGoPERT_2016_slim.xlsx  DAGoPERT_Semester_5.xlsx
doc/Paper/: IEEE - Manuscript Templates for Conference Proceedings.url
doc/Sonstiges/: Project_Diary_theObserver_GoogleDocs.url
doc/SprintReviewProtocols/: Sprint_Review_Protocol#2.xlsx  Sprint_Review_Protocol#3.xlsx  Sprint_Review_Protocol#4.xlsx  Sprint_Review_Protocol#5.xlsx
doc/final_upload-semester#3/: Timetable__Gruppe29_Visitor-Counter.xlsx  Visitor-Counter_Gruppe29_Presentation.pptx
doc/final_upload-semester#4/: class_based_main.py  multiprocessing_main.py  timetable_visitor-counter29.xlsx
doc/final_upload-semester#5/: Visitor-Counter_Group29_Paper.docx  Visitor-Counter_Group29_Presentation_Semester#5.pptx  timetable_visitor-counter29.xlsx
http/: index.html
http/interface/: index.html  package-lock.json  package.json
http/interface/css/: style.css
raspberry pi 4 3D case/USB_camera_mount_for_Raspberry_Pi/: LICENSE.txt  README.txt  SOURCES.txt
res/: publisher.py  subscriber.py
(+59 files in other folders)
