[project]
name = "theobserver"
version = "0.1.0"
description = ""
authors = [
    {name = "FHTW", email = "if20b219@technikum-wien.at"},
]
dependencies = [
    "paho-mqtt",
    "opencv-python",
    "imutils",
    "pyyaml",
    "requests",
    "flask>=2.2.2",
]
requires-python = ">=3.8"
license = {text = "MIT"}


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = []
